fix : image disappear on mobile

--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@
     --form-container: #e6e6e6;
     --button-color: #52b2ad;
     --input-color: #666;
+    --incorrect-color: #ff0000;
+    --correct-color: #008000;
+
     --input-font-family: Poppins-Medium;
     --input-font-size: 17px;
 
     --select-container-border: 2px solid #212121;
     --select-border: 1px solid #E8EAED;
     --border-radius: 25px;
-
-    --incorrect-color: #ff0000;
-    --correct-color: #008000;
 }
 
 *{
@@ -49,7 +49,8 @@ body{
 .displayed-container{
     display: flex;
     height: 650px;
-    width: 70%;
+    overflow: hidden;
+    width: 75%;
 }
 
 .login-container,
@@ -70,9 +71,9 @@ body{
 }
 
 .main-image{
-    background-position: right;
-    background-size: cover;
     background: url("./images/pageImage1.jpg") no-repeat center;
+    background-size: cover;
+    background-position: right;
     min-height: auto;
     width: 60%;
 }
@@ -91,8 +92,8 @@ body{
     margin: 35px auto;
 }
 
-.form-title{
-    margin: 100px auto;
+.login-container .form-title{
+    margin: 30px auto;
 }
 
 .user-input-container .text-info{
@@ -224,8 +225,19 @@ body{
         width: 100%;
     }
 
+    .login-container{
+        width: 100%;
+    }
+
     .main-image{
-        display: none;
+        width: 100%;
+        height: 100%;
+    }
+
+    .displayed-container{
+        flex-direction: column-reverse;
+        height: 100%;
+        overflow: scroll;
     }
 
     .welcome::after,
